Fix modal display on mobile

--- a/conf-website/src/css/styles.scss
+++ b/conf-website/src/css/styles.scss
@@ -29,11 +29,6 @@ $primary: $iceberg;
     padding-bottom: 30px;
 }
 
-.content {
-    margin-left: 30px;
-    margin-right: 30px;
-}
-
 #year {
     font-weight: 300;
 }
